@@ -249,6 +249,11 @@ module.exports = function (ins) {
   if (dns.resolveNaptr) wrap(dns, 'resolveNaptr', activator)
 
   var fs = require('fs')
+  var wrappedFsRealpathNative
+  if (fs.realpath.native) {
+    wrappedFsRealpathNative = wrap(fs.realpath, 'native', activator)
+  }
+
   massWrap(
     fs,
     [
@@ -286,6 +291,10 @@ module.exports = function (ins) {
     ],
     activator
   )
+
+  if (wrappedFsRealpathNative) {
+    fs.realpath.native = wrappedFsRealpathNative
+  }
 
   // only wrap lchown and lchmod on systems that have them.
   if (fs.lchown) wrap(fs, 'lchown', activator) // eslint-disable-line node/no-deprecated-api
