@@ -39,6 +39,10 @@ Notes:
 [float]
 ===== Bug fixes
 
+* Wrap `fs.realpath.native` when configured with `asyncHooks=false`. This
+  fixes using that function (which was undefined before this fix) and a
+  crash when importing fs-extra@10. ({issues}2401[#2401])
+
 * A significant change was made to internal run context tracking (a.k.a. async
   context tracking). There are no configuration changes or API changes for
   custom instrumentation. ({pull}2181[#2181])
